# pySOF0273

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.md  LICENSE.md  Makefile  README.md  codemeta.json  pyproject.toml  pytest.ini  requirements.txt
scripts/: sof0273
src/: SOF0273.py
src/pysof0273/: __init__.py  sof0273.py
tests/: conftest.py  test_protocol.py
